--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "morgan": "^1.9.1",
+    "nunjucks": "^3.2.0",
     "socket.io": "^2.2.0",
     "youtube-mp3-downloader": "^0.6.3"
   },
@@ -20,6 +21,7 @@
     "@types/express": "^4.17.0",
     "@types/morgan": "^1.7.36",
     "@types/node": "^12.7.1",
+    "@types/nunjucks": "^3.1.2",
     "@types/socket.io": "^2.1.2",
     "nodemon": "^1.19.1",
     "ts-node": "^8.3.0",
