--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-fingerprint": "^1.1.3",
     "morgan": "^1.9.1",
     "nunjucks": "^3.2.0",
     "socket.io": "^2.2.0",
